# atoy

./: Cargo.toml
proc/: Cargo.toml
proc/src/: lib.rs
src/: app.rs  bounding.rs  channel.rs  clock.rs  controller.rs  entity.rs  error.rs  event.rs  frustum.rs  lib.rs  lru.rs  materices.rs  message.rs  ncor.rs  notify.rs  plane.rs  property.rs  readonly.rs  scene.rs  share.rs  test.rs  utils.rs  value.rs  viewer.rs
src/anewthing/: app.rs  buffer.rs  buffering.rs  channel.rs  clock.rs  key.rs  mod.rs  plugin.rs  renderer.rs  scheduler.rs  texturing.rs  utils.rs
src/camera/: mod.rs  orthogonal.rs  perspective.rs  universal.rs
src/core/: DESIGN.md  app.rs  bounding.rs  carrier.rs  channel.rs  clock.rs  command.rs  ecs.rs  engine.rs  entity.rs  frustum.rs  looper.rs  mod.rs  operator.rs  plane.rs  property.rs  resource.rs  runner.rs  scene.rs  transparency.rs  versioning.rs  viewer.rs
src/entity/: collection.rs  mod.rs
src/geometry/: cube.rs  indexed_cube.rs  mod.rs  multicube.rs  plane.rs  raw.rs  rectangle.rs  sphere.rs
src/light/: ambient.rs  ambient_light.rs  area_light.rs  attenuation.rs  diffuse.rs  directional_light.rs  mod.rs  point_light.rs  specular.rs  spot_light.rs
src/loader/: dds.rs  image.rs  mod.rs  texture.rs
src/material/: environment_mapping.rs  mod.rs  multiple_textures_instanced.rs  solid_color.rs  solid_color_instanced.rs  texture.rs  texture_mapping.rs  texture_mapping_instanced.rs
src/pipeline/: mod.rs
src/render/: graph.rs  mod.rs
web/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.mts
(+332 files in other folders)
