[package]
name = "proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.61"
web-sys = { version = "0.3.69", features = ["WebGl2RenderingContext"] }
